--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>The amazing calculator</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="./js/index.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="./css/index.css" />
     </head>
     <body>
@@ -13,31 +12,31 @@
                 THE AMAZING CALCULATOR
             </div>
             <div class="display">
-                <input class="inputNumber" type="text"/>
+                <input class="inputNumber" id = "inputvalue" type="text"/>
             </div>
             <div class="operators">
                 <span class="leftContainer">
-                    <span class="resetButton">
+                    <span class="resetButton" onclick = "clear(true);">
                         RESET
                     </span>
-                    <span class="equalButton">
+                    <span class="equalButton" onclick = "calculate();">
                         =
                     </span>
                 </span>
                 <span class="rightContainer">
                     <span class="upperOperators">
-                        <span id="addButton">
+                        <span id="addButton" onclick = "AddOperator('+');" >
                             +
                         </span>
-                        <span id="substractButton">
+                        <span id="substractButton" onclick = "AddOperator('-');">
                             -
                         </span>
                     </span>
                     <span class="lowerOperators">
-                        <span id="multiplicationButton">
+                        <span id="multiplicationButton" onclick = "AddOperator('*');" >
                             *
                         </span>
-                        <span id="divisionButton">
+                        <span id="divisionButton" onclick = "AddOperator('/');">
                             /
                         </span>
                     </span>
@@ -55,5 +54,6 @@
                 </div>
             </div>
         </div>
+        <script src="./js/index.js" type="text/javascript"></script>
     </body>
 </html>
