--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="operators">
                 <span class="leftContainer">
-                    <span class="resetButton" onclick = "clear(true);">
+                    <span class="resetButton" onclick = "clean();">
                         RESET
                     </span>
                     <span class="equalButton" onclick = "calculate();">
